<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Books for your Mental Peace and Optimism"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/book1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/messageWithLink"
        android:layout_marginBottom="30dp"
        android:linksClickable="true"/>

    <TextView
        android:id="@+id/book2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/msg2"
        android:layout_marginBottom="30dp"
        android:linksClickable="true"/>

    <TextView
        android:id="@+id/book3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/msg3"
        android:layout_marginBottom="30dp"
        android:linksClickable="true"/>

    <TextView
        android:id="@+id/book4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/msg4"
        android:linksClickable="true"/>

</LinearLayout>
